# LBM_PACS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  py_requirements.txt
examples/: README.md  Test.cpp
examples/test1/: CMakeLists.txt  Test.cpp  params.json
examples/test_inflow_outflow/: CMakeLists.txt  params.json  test_inflow_outflow.cpp
examples/test_lid_driven/: CMakeLists.txt  params.json  test_lid_driven.cpp
images/: CMakeLists.txt
src/: CMakeLists.txt  README.md  lattice.cpp  lattice.hpp  lattice_boltzmann.cpp  lattice_boltzmann.hpp  lattice_gpu.cu  lattice_gpu.cuh  latttice.cpp  node.cpp  node.hpp  utils.cpp  utils_python.cpp
src/io/: CMakeLists.txt
src/numerics/: CMakelists.txt
src/old_code/: lattice_boltzmann.cpp  lattice_boltzmann.hpp
src/python_scripts/: CMakeLists.txt  README.md  animation.py  lattice_generation.py  lattice_generation_RGB.py  output.csv
src/utils/: CMakeLists.txt  README.md  utils.cpp  utils.hpp  utils_python.cpp  utils_python.hpp
